--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
     ports:
       - 5431:5432
     environment:
-      - POSTGRES_DB: postgres
-      - POSTGRES_USER: postgres 
-      - POSTGRES_PASSWORD: swaroop@Vjs1304
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres 
+      - POSTGRES_PASSWORD=swaroop@Vjs1304
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
