--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "aitodo",
+  "name": "aitodoapp",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "drizzle.config.js",
   "scripts": {
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
+    "studio": "drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "swaroop",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/node": "^22.13.0",
-    "@types/pg": "^8.11.11",
-    "drizzle-kit": "^0.30.4",
-    "tsx": "^4.19.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JyothiSwaroop07/AiTodoApp.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JyothiSwaroop07/AiTodoApp/issues"
+  },
+  "homepage": "https://github.com/JyothiSwaroop07/AiTodoApp#readme",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
+    "node": "^23.7.0",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.0"
   }
 }
