--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
     "node": "^23.7.0",
+    "openai": "^4.82.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
